--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Vidpub
-email: rob@conery.io
+title: Jalil Tahirov
+email: jalil.tahirov@outlook.com
 description: > # Videos are awesome yay!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://vidpub.com" # the base hostname & protocol for your site
-twitter_username: robconery
-github_username:  robconery
+twitter_username: jalil
+github_username:  jalil
 permalink: pretty
 
 # Build settings
